import { Controller } from '@nestjs/common';
import { GrpcMethod } from '@nestjs/microservices';
import { QuestionService } from './question.service';

@Controller()
export class QuestionGrpcController {
  constructor(private readonly questionService: QuestionService) {}

  // ==================== 题目管理 ====================

  @GrpcMethod('QuestionService', 'FindById')
  async findById(data: { id: string }) {
    // TODO: 实现查找题目逻辑
    return {
      id: data.id,
      type: 'single',
      content: '测试题目',
      // ... 其他字段
    };
  }

  @GrpcMethod('QuestionService', 'FindMany')
  async findMany(data: {
    page?: number;
    limit?: number;
    search?: string;
    type?: string;
    categoryId?: string;
    difficulty?: string;
    tagIds?: string[];
    knowledgePointIds?: string[];
  }) {
    // TODO: 实现查询题目列表逻辑
    return {
      questions: [],
      total: 0,
      page: data.page || 1,
      limit: data.limit || 10,
    };
  }

  @GrpcMethod('QuestionService', 'Create')
  async create(data: any) {
    // TODO: 实现创建题目逻辑
    return {
      id: 'new_question_id',
      type: data.type,
      content: data.content,
      // ... 其他字段
    };
  }

  @GrpcMethod('QuestionService', 'Update')
  async update(data: any) {
    // TODO: 实现更新题目逻辑
    return {
      id: data.id,
      // ... 更新后的字段
    };
  }

  @GrpcMethod('QuestionService', 'Delete')
  async delete(data: { id: string }) {
    // TODO: 实现删除题目逻辑
    return {
      success: true,
      message: '题目已删除',
    };
  }

  @GrpcMethod('QuestionService', 'BatchDelete')
  async batchDelete(data: { ids: string[] }) {
    // TODO: 实现批量删除题目逻辑
    return {
      success: true,
      message: `成功删除 ${data.ids.length} 个题目`,
    };
  }

  // ==================== 题目分类管理 ====================

  @GrpcMethod('QuestionService', 'GetCategories')
  async getCategories(data: { parentId?: string }) {
    // TODO: 实现获取题目分类树逻辑
    return {
      categories: [],
    };
  }

  @GrpcMethod('QuestionService', 'CreateCategory')
  async createCategory(data: { name: string; parentId?: string; level: number }) {
    // TODO: 实现创建分类逻辑
    return {
      id: 'new_category_id',
      name: data.name,
      level: data.level,
    };
  }

  @GrpcMethod('QuestionService', 'UpdateCategory')
  async updateCategory(data: { id: string; name?: string; parentId?: string }) {
    // TODO: 实现更新分类逻辑
    return {
      id: data.id,
      name: data.name,
    };
  }

  @GrpcMethod('QuestionService', 'DeleteCategory')
  async deleteCategory(data: { id: string }) {
    // TODO: 实现删除分类逻辑
    return {
      success: true,
      message: '分类已删除',
    };
  }

  @GrpcMethod('QuestionService', 'MoveToCategory')
  async moveToCategory(data: { questionIds: string[]; categoryId: string }) {
    // TODO: 实现批量移动题目到分类逻辑
    return {
      success: true,
      message: `已移动 ${data.questionIds.length} 个题目`,
    };
  }

  // ==================== 知识点管理 ====================

  @GrpcMethod('QuestionService', 'GetKnowledgePoints')
  async getKnowledgePoints(data: { categoryId?: string }) {
    // TODO: 实现获取知识点列表逻辑
    return {
      knowledgePoints: [],
    };
  }

  @GrpcMethod('QuestionService', 'CreateKnowledgePoint')
  async createKnowledgePoint(data: { name: string; categoryId: string; description?: string }) {
    // TODO: 实现创建知识点逻辑
    return {
      id: 'new_kp_id',
      name: data.name,
    };
  }

  @GrpcMethod('QuestionService', 'LinkKnowledgePoints')
  async linkKnowledgePoints(data: { questionId: string; knowledgePointIds: string[] }) {
    // TODO: 实现关联知识点逻辑
    return {
      success: true,
    };
  }

  // ==================== 标签管理 ====================

  @GrpcMethod('QuestionService', 'GetTags')
  async getTags(data: { search?: string }) {
    // TODO: 实现获取标签列表逻辑
    return {
      tags: [],
    };
  }

  @GrpcMethod('QuestionService', 'CreateTag')
  async createTag(data: { name: string; color?: string }) {
    // TODO: 实现创建标签逻辑
    return {
      id: 'new_tag_id',
      name: data.name,
    };
  }

  @GrpcMethod('QuestionService', 'AddTags')
  async addTags(data: { questionId: string; tagIds: string[] }) {
    // TODO: 实现添加标签逻辑
    return {
      success: true,
    };
  }

  @GrpcMethod('QuestionService', 'RemoveTags')
  async removeTags(data: { questionId: string; tagIds: string[] }) {
    // TODO: 实现移除标签逻辑
    return {
      success: true,
    };
  }

  // ==================== 题目搜索 ====================

  @GrpcMethod('QuestionService', 'Search')
  async search(data: {
    keyword: string;
    type?: string;
    difficulty?: string;
    categoryId?: string;
    tagIds?: string[];
    page?: number;
    limit?: number;
  }) {
    // TODO: 实现全文搜索题目逻辑
    return {
      questions: [],
      total: 0,
      page: data.page || 1,
      limit: data.limit || 10,
    };
  }

  @GrpcMethod('QuestionService', 'AdvancedSearch')
  async advancedSearch(data: any) {
    // TODO: 实现高级搜索逻辑
    return {
      questions: [],
      total: 0,
    };
  }

  // ==================== 批量操作 ====================

  @GrpcMethod('QuestionService', 'BatchUpdate')
  async batchUpdate(data: { questionIds: string[]; updates: any }) {
    // TODO: 实现批量更新逻辑
    return {
      success: true,
      updatedCount: data.questionIds.length,
    };
  }

  @GrpcMethod('QuestionService', 'BatchExport')
  async batchExport(data: { questionIds: string[]; format: string }) {
    // TODO: 实现批量导出逻辑
    return {
      success: true,
      downloadUrl: 'http://example.com/export/questions.xlsx',
    };
  }

  @GrpcMethod('QuestionService', 'BatchImport')
  async batchImport(data: { fileUrl: string; categoryId: string }) {
    // TODO: 实现批量导入逻辑
    return {
      success: true,
      importedCount: 0,
      failedCount: 0,
      errors: [],
    };
  }

  // ==================== 题目统计 ====================

  @GrpcMethod('QuestionService', 'GetQuestionStats')
  async getQuestionStats(data: { questionId: string }) {
    // TODO: 实现获取题目统计信息逻辑
    return {
      questionId: data.questionId,
      totalAttempts: 0,
      correctRate: 0,
      averageTime: 0,
    };
  }
}

